--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -91,7 +91,7 @@
     </li>
     {% else %}
     <li class="nav-item ml-auto">
-      <a class="nav-link ajax-register d-none d-md-block" href="/?reg=yeah">
+      <a class="nav-link ajax-register d-none d-md-block" href="/?signup=yeah">
         Register
       </a>
       <a class="nav-link ajax-login d-block d-md-none" href="{% url 'index' %}">
