--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,7 +1,7 @@
 <div class="row color-1-trans shadow-up">
   <div class="container">
     <div class="row" id="player-wrapper">
-      <div class="col-auto" id="player-image">
+      <div class="col-auto pr-0" id="player-image">
         <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
           <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
         </a>
@@ -21,12 +21,12 @@
         </audio>
       </div>
       <div id="player-buttons">
-        <button type="button" aria-label="Minimize">
+        <a id="player-minimize" aria-label="Minimize">
           <i class="fas fa-window-minimize"></i>
-        </button>
-        <button type="button" aria-label="Close">
+        </a>
+        <a id="player-close" aria-label="Close">
           <i class="far fa-times-circle"></i>
-        </button>
+        </a>
       </div>
     </div>
   </div>
