--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -16,9 +16,9 @@ dopepod
 <div class="col-12 results-wrapper">
   <div class="row options">
     <div class="col">
-      <a class="btn btn-dope float-right" href="#">
-        Button
-      </a>
+      <div class="float-right" id="option-buttons">
+
+      </div>
     </div>
   </div>
   <form id="subscriptions-form" method="GET" action="{% url 'subscriptions' %}">
