--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -3,16 +3,16 @@
   <span class="results-header">
     {{ episodes_header }}
   </span>
-  <a class="btn btn-dope toggle float-right" id="show-button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
+  <a class="btn btn-dope toggle float-right show-button" id="show-episodes" href="#" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="true" aria-controls="episode-collapse">
     -
   </a>
 </div>
 <div class="col-12 collapse results-wrapper show" id="episode-collapse">
   <div class="row options">
     <div class="col">
-      <a class="btn btn-dope float-right" href="#">
-        Button
-      </a>
+      <div class="float-right" id="option-buttons">
+
+      </div>
     </div>
   </div>
   <div class="row results-list">
@@ -55,22 +55,25 @@
             <tr>
               <td colspan="4" class="hidden-row">
                 <div class="collapse more-collapse" id="more-collapse{{ forloop.counter }}">
-                  {{ episode.summary }}
-                  <br />
-                  <form class="play d-inline float-right" action="{% url 'play' %}" method="POST" target="_blank">
-                    {% csrf_token %}
-                    <input type="hidden" name="url" value="{{ episode.url }}">
-                    <input type="hidden" name="type" value="{{ episode.type }}">
-                    <input type="hidden" name="title" value="{{ episode.title }}">
-                    <input type="hidden" name="date" value="{{ episode.pubDate }}">
-                    <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-                    <button class="btn btn-dope float-right" type="submit">
-                      Play
-                    </button>
-                  </form>
-                  <a class="btn btn-dope float-right" href="{{ episode.url }}" title="Download" download>
-                    Download
-                  </a>
+                  <span class="episode-summary">
+                    {{ episode.summary }}
+                  </span>
+                  <div class="episode-buttons float-right">
+                    <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
+                      {% csrf_token %}
+                      <input type="hidden" name="url" value="{{ episode.url }}">
+                      <input type="hidden" name="type" value="{{ episode.type }}">
+                      <input type="hidden" name="title" value="{{ episode.title }}">
+                      <input type="hidden" name="date" value="{{ episode.pubDate }}">
+                      <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+                      <button class="btn btn-dope active" type="submit">
+                        Play
+                      </button>
+                    </form>
+                    <a class="btn btn-dope active" href="{{ episode.url }}" title="Download" download>
+                      Download
+                    </a>
+                  </div>
                 </div>
               </td>
             </tr>
