--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1,131 +1,12 @@
-@keyframes fadeIn {
-  0% {
-    color: rgba(255, 255, 255, 0);
-  }
-  100% {
-    color: rgba(255, 255, 255, 1);
-  }
+/* GLOBAL */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  line-height: 1.42857143;
+  color: #2e2e2e;
+  background: rgba(255, 255, 255, 1);
 }
 
-@-webkit-keyframes fadeIn {
-  0% {
-    color: rgba(255, 255, 255, 0);
-  }
-  100% {
-    color: rgba(255, 255, 255, 1);
-  }
-}
-
-@keyframes moveLeft {
-  0% {
-    color: rgba(255, 255, 255, 0);
-  }
-  100% {
-    color: rgba(255, 255, 255, 1);
-    transform: translateX(-20px);
-    -webkit-transform: translateX(-20px); /** Chrome & Safari **/
-    -o-transform: translateX(-20px); /** Opera **/
-    -moz-transform: translateX(-20px); /** Firefox **/
-  }
-}
-
-@-webkit-keyframes moveLeft {
-  0% {
-    color: rgba(255, 255, 255, 0);
-  }
-  100% {
-    color: rgba(255, 255, 255, 1);
-    transform: translateX(-20px);
-    -webkit-transform: translateX(-20px); /** Chrome & Safari **/
-    -o-transform: translateX(-20px); /** Opera **/
-    -moz-transform: translateX(-20px); /** Firefox **/
-  }
-}
-
-@keyframes moveRight {
-  0% {
-    color: rgba(255, 255, 255, 0);
-  }
-  100% {
-    color: rgba(255, 255, 255, 1);
-    transform: translateX(20px);
-    -webkit-transform: translateX(20px); /** Chrome & Safari **/
-    -o-transform: translateX(20px); /** Opera **/
-    -moz-transform: translateX(20px); /** Firefox **/
-  }
-}
-
-@-webkit-keyframes moveRight {
-  0% {
-    color: rgba(255, 255, 255, 0);
-    transform: translateX(20px);
-    -webkit-transform: translateX(20px); /** Chrome & Safari **/
-    -o-transform: translateX(20px); /** Opera **/
-    -moz-transform: translateX(20px); /** Firefox **/
-  }
-  100% {
-    color: rgba(255, 255, 255, 1);
-    transform: translateX(0px);
-    -webkit-transform: translateX(0px); /** Chrome & Safari **/
-    -o-transform: translateX(0px); /** Opera **/
-    -moz-transform: translateX(0px); /** Firefox **/
-  }
-}
-
-.x {
-  /* top: 10px; */
-  /* position: absolute;   */
-  color: rgba(255, 255, 255, 0);
-}
-
-.a {
-  /* left: 20px; */
-  animation: moveLeft 1s ease-in 3s forwards;
-  -webkit-animation: moveLeft 1s ease-in 3s forwards;
-}
-
-.b {
-  /* left: 20px; */
-  animation: moveLeft 1s ease-in 2s forwards;
-  -webkit-animation: moveLeft 1s ease-in 2s forwards;
-}
-
-.c {
-  /* left: 20px; */
-  animation: moveLeft 1s ease-in 1s forwards;
-  -webkit-animation: moveLeft 1s ease-in 1s forwards;
-}
-
-.d {
-  animation: fadeIn 1s ease-in forwards;
-  -webkit-animation: fadeIn 1s ease-in forwards;
-}
-
-.e {
-  /* right: 20px; */
-  animation: moveRight 1s ease-in 1s forwards;
-  -webkit-animation: moveRight 1s ease-in 1s forwards;
-}
-
-.f {
-  /* right: 40px; */
-  animation: moveRight 1s ease-in 2s forwards;
-  -webkit-animation: moveRight 1s ease-in 2s forwards;
-}
-
-.g {
-  /* right: 20px; */
-  animation: moveRight 1s ease-in 3s forwards;
-  -webkit-animation: moveRight 1s ease-in 3s forwards;
-}
-
-#logo {
-  text-align: center;
-  font-size: 24px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-}
-
+/* MEDIA QUERIES */
 /* Extra small devices (phones, up to 480px) */
 @media screen and (max-width: 767px) {
   body {
@@ -151,13 +32,7 @@
   }
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  line-height: 1.42857143;
-  color: #2e2e2e;
-  background: rgba(255, 255, 255, 1);
-}
-
+/* BUTTONS */
 .btn-dope {
   color: #2e2e2e;
   font-size: 16px;
@@ -172,31 +47,29 @@ body {
   -moz-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
   box-shadow: rgba(0,0,0,.3) 0 0px 3px;
 }
-
 .btn-dope-disabled, .btn-dope-disabled.active, .btn-dope-disabled:hover  {
   color: #2e2e2e;
   background: #ddd;
 }
 
+/* COLORS */
 .color-1-trans {
   background: rgba(76,222,181,.9);
 }
-
 .color-1 {
   background: rgba(76,222,181,1);
 }
-
 .color-2 {
   background: rgba(45,43,43,1);
 }
 
+/* SHADOWS */
 .shadow-down {
   border-bottom: 1px solid rgba(0,0,0,.3);
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
 }
-
 .shadow-up {
   border-top: 1px solid rgba(0,0,0,.3);
   -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
@@ -204,13 +77,7 @@ body {
   box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
 }
 
-#navbar-drop {
-  padding: 0;
-}
-#navbar a:hover {
-  color: #2e2e2e;
-  text-decoration: none;
-}
+/* NAVBAR */
 #navbar {
   padding: 0px;
   -webkit-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
@@ -218,10 +85,15 @@ body {
   box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   z-index: 99;
 }
+#navbar-drop {
+  padding: 0;
+}
+#navbar a:hover {
+  color: #2e2e2e;
+}
 .navbar-dropdown {
   min-width: 0;
 }
-
 .nav-link {
   padding: 10px;
 }
@@ -246,33 +118,126 @@ body {
 #navbar .nav-link:hover {
   color: #2e2e2e;
 }
+@keyframes fadeIn {
+  0% {
+    color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    color: rgba(255, 255, 255, 1);
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    color: rgba(255, 255, 255, 1);
+  }
+}
+@keyframes moveLeft {
+  0% {
+    color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    color: rgba(255, 255, 255, 1);
+    transform: translateX(-20px);
+    -webkit-transform: translateX(-20px); /** Chrome & Safari **/
+    -o-transform: translateX(-20px); /** Opera **/
+    -moz-transform: translateX(-20px); /** Firefox **/
+  }
+}
+@-webkit-keyframes moveLeft {
+  0% {
+    color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    color: rgba(255, 255, 255, 1);
+    transform: translateX(-20px);
+    -webkit-transform: translateX(-20px); /** Chrome & Safari **/
+    -o-transform: translateX(-20px); /** Opera **/
+    -moz-transform: translateX(-20px); /** Firefox **/
+  }
+}
+@keyframes moveRight {
+  0% {
+    color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    color: rgba(255, 255, 255, 1);
+    transform: translateX(20px);
+    -webkit-transform: translateX(20px); /** Chrome & Safari **/
+    -o-transform: translateX(20px); /** Opera **/
+    -moz-transform: translateX(20px); /** Firefox **/
+  }
+}
+@-webkit-keyframes moveRight {
+  0% {
+    color: rgba(255, 255, 255, 0);
+    transform: translateX(20px);
+    -webkit-transform: translateX(20px); /** Chrome & Safari **/
+    -o-transform: translateX(20px); /** Opera **/
+    -moz-transform: translateX(20px); /** Firefox **/
+  }
+  100% {
+    color: rgba(255, 255, 255, 1);
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px); /** Chrome & Safari **/
+    -o-transform: translateX(0px); /** Opera **/
+    -moz-transform: translateX(0px); /** Firefox **/
+  }
+}
+.x {
+  /* top: 10px; */
+  /* position: absolute;   */
+  color: rgba(255, 255, 255, 0);
+}
+.a {
+  /* left: 20px; */
+  animation: moveLeft 1s ease-in 3s forwards;
+  -webkit-animation: moveLeft 1s ease-in 3s forwards;
+}
+.b {
+  /* left: 20px; */
+  animation: moveLeft 1s ease-in 2s forwards;
+  -webkit-animation: moveLeft 1s ease-in 2s forwards;
+}
+.c {
+  /* left: 20px; */
+  animation: moveLeft 1s ease-in 1s forwards;
+  -webkit-animation: moveLeft 1s ease-in 1s forwards;
+}
+.d {
+  animation: fadeIn 1s ease-in forwards;
+  -webkit-animation: fadeIn 1s ease-in forwards;
+}
+.e {
+  /* right: 20px; */
+  animation: moveRight 1s ease-in 1s forwards;
+  -webkit-animation: moveRight 1s ease-in 1s forwards;
+}
+.f {
+  /* right: 40px; */
+  animation: moveRight 1s ease-in 2s forwards;
+  -webkit-animation: moveRight 1s ease-in 2s forwards;
+}
+.g {
+  /* right: 20px; */
+  animation: moveRight 1s ease-in 3s forwards;
+  -webkit-animation: moveRight 1s ease-in 3s forwards;
+}
+#logo {
+  text-align: center;
+  font-size: 24px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
 
 #main {
   padding: 15px;
   min-height: 100vh;
 }
 
-#page-buttons {
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-.page-button {
-  margin: 0 1px 0;
-  padding: 4px 6px;
-}
-
-
-.page-list {
-  list-style: none;
-  font-size: 16px;
-}
-.options {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.options-group {
-  background-color: rgba(76,222,181,1);
-}
+/* TOGGLE BUTTONS */
 #browse-toggle{
   margin-top: 8px;
 }
@@ -289,7 +254,26 @@ body {
   color: #2e2e2e;
 }
 
-
+/* OPTIONS BUTTONS */
+#page-buttons {
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+.page-button {
+  margin: 0 1px 0;
+  padding: 4px 6px;
+}
+.page-list {
+  list-style: none;
+  font-size: 16px;
+}
+.options {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.options-group {
+  background-color: rgba(76,222,181,1);
+}
 .options-button {
   margin-right: 8px;
   margin-bottom: 8px;
@@ -309,6 +293,8 @@ body {
   clip: rect(0,0,0,0);
   pointer-events: none;
 }
+
+/* ALPHABET BUTTONS */
 #alphabet-buttons {
   background: inherit;
   font-size: 16px;
@@ -374,6 +360,7 @@ body {
   margin-bottom: -44px;
 }
 
+/* SEARCH */
 #search-field {
   font-size: 16px;
   width: 250px;
@@ -414,6 +401,7 @@ body {
   box-shadow: rgba(0,0,0,.3) 0 0 3px;
 }
 
+/* SPLASH */
 #splash {
   font-size: 16px;
   background: #fff;
@@ -428,6 +416,8 @@ body {
 #splash-bottom {
   padding-bottom: 10px;
 }
+
+/* LOGIN-SIGNUP */
 #login-signup {
   height: 400px;
 }
@@ -462,20 +452,6 @@ body {
 #social-icons {
   font-size: 20px;
 }
-.close {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.close {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.close:focus {
-  outline: 0;
-}
-
 .login-field {
   padding: 5px 8px;
   border-radius: .25rem;
@@ -489,6 +465,16 @@ body {
   box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
 }
 
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.close:focus {
+  outline: 0;
+}
+
+/* DASHBOARD */
 #dashboard {
   height: 400px;
 }
@@ -503,11 +489,13 @@ body {
   font-size: 16px;
 }
 
+/* SETTINGS */
 #settings {
   height: 400px;
   padding: 15px;
 }
 
+/* PODINFO */
 #podinfo {
   position: relative;
   padding: 15px 15px 0 15px;
@@ -544,7 +532,6 @@ body {
   max-height: 65px;
   overflow: hidden;
 }
-
 #podinfo-copyright {
 
 }
@@ -555,11 +542,8 @@ body {
 }
 #podinfo-description {
 }
-#show-button {
-  position: absolute;
-  color: #2e2e2e;
-  margin-left: 10px;
-}
+
+/* EPISODES */
 .hidden-row {
   padding: 0 !important;
 }
@@ -584,13 +568,7 @@ body {
   background: #fff;
 }
 
-hr .h-line {
-  height: 1px;
-  border: 0;
-  background: #ddd;
-  background: -webkit-gradient(linear, 0 0, 100% 0, from(white), to(white), color-stop(50%, #ddd));
-}
-
+/* RESULTS */
 .results-wrapper a, .results-wrapper a:hover {
   text-decoration: none;
 }
@@ -609,7 +587,6 @@ hr .h-line {
   padding-top: 8px;
   padding-bottom: 8px;
 }
-
 .results-list {
   padding: 10px;
 }
@@ -645,7 +622,6 @@ hr .h-line {
   overflow: hidden;
   margin: 0;
 }
-
 .browse-results-list {
   font-size: 14px;
   padding-left: 0;
@@ -660,7 +636,14 @@ hr .h-line {
   margin-top: 4px;
   margin-bottom: 4px;
 }
+hr .h-line {
+  height: 1px;
+  border: 0;
+  background: #ddd;
+  background: -webkit-gradient(linear, 0 0, 100% 0, from(white), to(white), color-stop(50%, #ddd));
+}
 
+/* LOADING GIFS */
 #overlay {
     background: url("loading.gif");
     background-repeat: no-repeat;
@@ -668,6 +651,7 @@ hr .h-line {
     height: 240px;
 }
 
+/* PLAYER */
 #player-wrapper a, #player-wrapper a:hover {
   color: #2e2e2e;
   text-decoration: none;
@@ -688,7 +672,7 @@ hr .h-line {
   margin-left: 10px;
 }
 
-
+/* FOOTER */
 #footer {
   padding-top: 10px;
   padding-bottom: 10px;
